syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option go_package = "/proto";

service PersonService {
  rpc GetPerson(GetRequest) returns (Person) {}
  rpc SetPerson(Person) returns (SetResponse) {}
}

message GetRequest {
  int32 id = 1;
}

message SetResponse {
  int32 id = 1;
}

message Person {
  string name = 1;
  int32 id = 2;  
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

